--- a/index.html
+++ b/index.html
@@ -1,8 +1,83 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-	<title></title>
+	<meta charset="utf-8"/>
+	<title>Puls4 Comunidad</title>
+	<link rel="stylesheet" href="css/puls4.css"/>
 </head>
 <body>
+	<header>
+		<div class="logo">
+			<img src="imagenes/logo.png" alt="puls4"/>
+		</div>
+		<div class="titular">
+			<h1 class="titulo">Puls4 Comunidad Profesional</h1>
+		</div>
+		<div>
+			<a href="" class="filtro">
+				Responsive Design
+			</a>
+			<a href="" class="publicar"></a>
+		</div>
+		<div class="usuario">
+			<figure class="avatar">
+				<img src="imagenes/avatar.jpg" alt="nekro"/>
+			</figure>
+			<a href="" class="flecha">
+				X
+			</a>
+		</div>
+	</header>
 
+	<nav>
+		<ul class="menu">
+			<li><a href="#">Python</a></li>
+			<li><a href="#">HTML5</a></li>
+			<li><a href="#">Javascript</a></li>
+			<li><a href="#">Django</a></li>
+			<li><a href="#">CSS3</a></li>
+		</ul>
+	</nav>
+
+	<section class="posts">
+		<article class="posts">
+			<div class="descripcion">
+				<figure class="imagen">
+					<img src="imagenes/foto.jpg">
+				</figure>
+				<div class="detalles">
+					<h2 class="titulo">
+						Colores,gradientes y texto 3d SASS y Compass
+					</h2>
+					<p class="autor">
+						por <a href="#" id="">Adrian Diaz</a>
+					</p>
+					<a href="#" class="tag">CSS3</a>
+					<p class="fecha">hace<strong>20</strong> min.</p>
+				</div>
+			</div>
+			<div class="acciones">
+				<div class="votos">
+					<a href="#" class="up">U</a>
+					<spa class="total">156</spa>
+					<a href="#" class="down">D</a>
+				</div>
+				<div class="datos">
+					<a href="#" class="comentarios">
+						10
+					</a>
+					<a href="#" class="estrellita">*</a>		
+				</div>
+			</div>
+		</article>
+	</section>
+	<footer>
+		<h3>
+			<strong>Powered by Platzi</strong>
+			<span class="mejor">
+				mejorando.la 2014
+			</span>
+		</h3>
+	</footer>
 </body>
 </html>
