--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Puls4 Comunidad</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/puls4.css"/>
 </head>
 <body>
 	<header>
-		<div class="logo">
+		<div class="logo left">
 			<img src="imagenes/logo.png" alt="puls4"/>
 		</div>
 		<div class="titular">
@@ -66,7 +67,7 @@
 					<a href="#" class="comentarios">
 						10
 					</a>
-					<a href="#" class="estrellita">*</a>		
+					<a href="" class="estrellita">*</a>		
 				</div>
 			</div>
 		</article>
